--- a/services/activitylog/pkg/service/l10n/locale/ru/LC_MESSAGES/activitylog.po
+++ b/services/activitylog/pkg/service/l10n/locale/ru/LC_MESSAGES/activitylog.po
@@ -5,16 +5,16 @@
 # 
 # Translators:
 # Savely Krasovsky, 2025
-# Анастасия Ванина, 2025
+# Lulufox, 2025
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: EMAIL\n"
-"POT-Creation-Date: 2025-08-08 00:01+0000\n"
+"POT-Creation-Date: 2025-08-20 00:01+0000\n"
 "PO-Revision-Date: 2025-01-27 10:17+0000\n"
-"Last-Translator: Анастасия Ванина, 2025\n"
+"Last-Translator: Lulufox, 2025\n"
 "Language-Team: Russian (https://app.transifex.com/opencloud-eu/teams/204053/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -84,11 +84,11 @@ msgstr "{user} переименовал {oldResource} в {resource}"
 
 #: pkg/service/response.go:33
 msgid "{user} shared {resource} via link"
-msgstr ""
+msgstr "{user} предоставил(-а) совместный доступ к {resource} по ссылке"
 
 #: pkg/service/response.go:30
 msgid "{user} shared {resource} with {sharee}"
-msgstr ""
+msgstr "{user} предоставил(-а) совместный доступ к {resource} для {sharee}"
 
 #: pkg/service/response.go:34
 msgid "{user} updated {field} for a link {token} on {resource}"
