--- a/services/userlog/pkg/service/l10n/locale/ru/LC_MESSAGES/userlog.po
+++ b/services/userlog/pkg/service/l10n/locale/ru/LC_MESSAGES/userlog.po
@@ -4,16 +4,16 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Анастасия Ванина, 2025
+# Lulufox, 2025
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: EMAIL\n"
-"POT-Creation-Date: 2025-08-08 00:01+0000\n"
+"POT-Creation-Date: 2025-08-20 00:01+0000\n"
 "PO-Revision-Date: 2025-01-27 10:17+0000\n"
-"Last-Translator: Анастасия Ванина, 2025\n"
+"Last-Translator: Lulufox, 2025\n"
 "Language-Team: Russian (https://app.transifex.com/opencloud-eu/teams/204053/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,15 +60,15 @@ msgstr "Удалить из пространства"
 
 #: pkg/service/templates.go:43
 msgid "Resource shared"
-msgstr ""
+msgstr "Ресурс доступен для совместного использования"
 
 #: pkg/service/templates.go:48
 msgid "Resource unshared"
-msgstr ""
+msgstr "Ресурс не доступен для совместного использования"
 
 #: pkg/service/templates.go:53
 msgid "Share expired"
-msgstr ""
+msgstr "Срок совместного использования истек"
 
 #: pkg/service/templates.go:33
 msgid "Space deleted"
@@ -80,7 +80,7 @@ msgstr "Пространство отключено"
 
 #: pkg/service/templates.go:18
 msgid "Space shared"
-msgstr ""
+msgstr "Пространство доступно для совместного использования"
 
 #: pkg/service/templates.go:8
 msgid "Virus found"
@@ -113,4 +113,4 @@ msgstr "{user} поделился(-лась) с вами {resource}"
 
 #: pkg/service/templates.go:49
 msgid "{user} unshared {resource} with you"
-msgstr ""
+msgstr "{user} забрал у вас доступ к {resource}"
